# xlex

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  README.zh-TW.md  SECURITY.md  cliff.toml  clippy.toml  install.sh  mkdocs.yml  rustfmt.toml
.cargo/: audit.toml
.claude/: settings.local.json
.claude/commands/openspec/: apply.md
.claude/skills/rust-development/: SKILL.md
.claude/skills/rust-development/references/: ffi-guide.md  linting-guide.md  project-structure.md  serde-patterns.md  unsafe-guide.md
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.yml
.github/prompts/: commit.prompt.md
.github/workflows/: ci.yml  docs.yml  release.yml
Formula/: xlex.rb
crates/xlex-cli/: Cargo.toml
crates/xlex-cli/src/: main.rs  progress.rs
crates/xlex-cli/src/commands/: cell.rs  column.rs  export.rs  formula.rs  import.rs  mod.rs  range.rs  row.rs  search.rs  session.rs  sheet.rs  style.rs  template.rs  update.rs  workbook.rs
crates/xlex-cli/tests/: integration_tests.rs
crates/xlex-core/: Cargo.toml
crates/xlex-core/benches/: benchmarks.rs
crates/xlex-core/src/: cell.rs  error.rs  lazy.rs  lib.rs  range.rs  reader.rs  sheet.rs  style.rs  workbook.rs
crates/xlex-core/src/parser/: lazy_shared_strings.rs  mod.rs  shared_strings.rs  styles.rs  workbook.rs
crates/xlex-core/src/writer/: mod.rs  workbook.rs
crates/xlex-core/tests/: prop_tests.rs
crates/xlex-mcp/: Cargo.toml  README.md
crates/xlex-mcp/src/: error.rs  lib.rs  main.rs  server.rs  session.rs
crates/xlex-mcp/src/tools/: cell.rs  export.rs  mod.rs  row.rs  sheet.rs  workbook.rs
crates/xlex-mcp/tests/: integration_tests.rs
dev/bench/: data.js
docs/: index.md  mkdocs.yml
docs/development/: library-usage.md
docs/getting-started/: installation.md  quick-start.md
docs/reference/: cli-reference.md  exit-codes.md
docs/skills/xlex-agent/: SKILL.md
docs/skills/xlex-agent/references/: commands.md  examples.md
npm/: install.js  package.json
npm/xlex/: README.md  install.js  package.json
openspec/: project.md
openspec/changes/add-xlex-cli-engine/: design.md  proposal.md  tasks.md
openspec/changes/add-xlex-cli-engine/specs/cell-ops/: spec.md
openspec/changes/add-xlex-cli-engine/specs/cli-interface/: spec.md
openspec/changes/add-xlex-cli-engine/specs/column-ops/: spec.md
openspec/changes/add-xlex-cli-engine/specs/error-handling/: spec.md
openspec/changes/add-xlex-cli-engine/specs/formula-ops/: spec.md
openspec/changes/add-xlex-cli-engine/specs/import-export/: spec.md
openspec/changes/add-xlex-cli-engine/specs/style-ops/: spec.md
openspec/changes/add-xlex-cli-engine/specs/template-ops/: spec.md
openspec/changes/add-xlex-cli-engine/specs/workbook-ops/: spec.md
openspec/changes/archive/2026-02-03-implement-style-writer/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-03-implement-style-writer/specs/style-persistence/: spec.md
openspec/changes/archive/2026-02-03-optimize-large-file-performance/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-03-optimize-large-file-performance/specs/performance/: spec.md
openspec/changes/archive/2026-03-05-add-xlex-cli-engine/specs/core-engine/: spec.md
openspec/changes/archive/2026-03-05-add-xlex-cli-engine/specs/documentation/: spec.md
openspec/changes/archive/2026-03-05-add-xlex-cli-engine/specs/github-templates/: spec.md
openspec/changes/archive/2026-03-05-add-xlex-cli-engine/specs/range-ops/: spec.md
openspec/changes/archive/2026-03-05-add-xlex-cli-engine/specs/row-ops/: spec.md
openspec/changes/archive/2026-03-05-add-xlex-cli-engine/specs/sheet-ops/: spec.md
openspec/changes/archive/2026-03-05-xlex-mcp/: proposal.md  tasks.md
openspec/changes/xlex-mcp/: design.md
openspec/changes/xlex-mcp/specs/mcp-server/: spec.md
openspec/changes/xlex-mcp/specs/mcp-tools/: spec.md
openspec/specs/performance/: spec.md
openspec/specs/style-persistence/: spec.md
scripts/: npm-publish.sh
tests/: cli_test.sh  generate_fixtures.sh  perf_validation.sh  test_styles_demo.sh
tests/fixtures/: .gitignore  README.md
