[workspace]
resolver = "2"
members = [
    "crates/xlex-core",
    "crates/xlex-cli",
    "crates/xlex-mcp",
]

[workspace.package]
version = "0.2.4"
edition = "2021"
rust-version = "1.80"  # MSRV - also update .github/workflows/ci.yml
authors = ["yen0304"]
license = "MIT"
repository = "https://github.com/yen0304/xlex"
homepage = "https://github.com/yen0304/xlex"
documentation = "https://yen0304.github.io/xlex"
readme = "README.md"
keywords = ["excel", "xlsx", "cli", "spreadsheet", "automation"]
categories = ["command-line-utilities", "parser-implementations"]

[workspace.dependencies]
# Core dependencies
zip = "2.4"  # 2.4.x, non-yanked, MSRV 1.73
quick-xml = "0.36"
time = ">=0.3.37, <0.3.42"  # Pin: 0.3.42+ requires Rust 1.81+, 0.3.47+ (vuln fix) requires 1.88+
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# CLI dependencies
clap = { version = "4.5", features = ["derive", "env", "wrap_help"] }
clap_complete = "4.5"
colored = "2.1"
indicatif = "0.17"
console = "0.15"
dialoguer = "0.11"

# Async / IO
tokio = { version = "1.0", features = ["full"] }

# Utils
thiserror = "1.0"
anyhow = "1.0"
lru = "0.16"  # Fix RUSTSEC-2026-0002 unsoundness
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
regex = "1.10"
regex-lite = "0.1"
handlebars = "4.5"  # MSRV guard: 5.0+ requires pest 2.8+ which needs Rust 1.83+
csv = "1.3"
dirs = "5.0"
memmap2 = "0.9"
rayon = "1.10"

# Testing
tempfile = "3.10"
criterion = { version = "0.5", features = ["html_reports"] }

# Dev tools
cargo-husky = { version = "1", features = ["precommit-hook", "run-cargo-fmt", "run-cargo-clippy", "run-cargo-test"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
