[package]
name = "xlex-core"
description = "Core library for XLEX - A streaming Excel manipulation engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["excel", "xlsx", "spreadsheet", "parser"]
categories = ["parser-implementations", "data-structures"]

[features]
default = ["parallel"]
parallel = ["rayon"]

[dependencies]
zip = { workspace = true }
quick-xml = { workspace = true }
time = { workspace = true }  # Pin transitive dep (via zip) for MSRV 1.80 compatibility
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
lru = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
regex = { workspace = true }
handlebars = { workspace = true }
memmap2 = { workspace = true }
rayon = { workspace = true, optional = true }

[dev-dependencies]
tempfile = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "benchmarks"
harness = false
